# exvr

./: .clang-format  .gitignore  .gitmodules  README.md  XIVR.sln  build_dependencies.bat  tasks.md
CoreDalamud/: Core.cs  CoreDalamud.csproj  XIVRCore.json
CoreNative/: CoreNative.vcxproj  CoreNative.vcxproj.filters
CoreNative/src/: Log.cpp  Log.h  Main.cpp
CoreNative/src/game/: Addresses.h  Util.h
CoreNative/src/game/graphics/kernel/: Device.h  SwapChain.h  Texture.h
CoreNative/src/game/graphics/render/: RenderTargetManager.h
CoreNative/src/game/system/framework/: Framework.h
CoreNative/src/hooks/graphics/kernel/: ProcessEventsTrampoline.asm
CoreNative/src/xr/: InputManager.cpp  InputManager.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  StereoRender.cpp  StereoRender.h  Swapchain.cpp  Swapchain.h  XR.cpp  XR.h  XRUtils.cpp  XRUtils.h
common/cimgui/: build.rs
common/cimgui/src/: lib.rs
common/dxup-rs/: .gitignore  Cargo.toml  README.md  build.rs
common/dxup-rs/src/: lib.rs
common/dxup-rs/src-cpp/d3d10_1/: d3d10_1_main.cpp
common/dxup10/: Cargo.toml  README.md  build.rs
common/dxup10/src-cpp/: dxvk_d3d11.cpp  dxvk_d3d11.h  lines.txt
common/dxup10/src-cpp/d3d10/: d3d10_blend.cpp  d3d10_buffer.cpp  d3d10_core.cpp  d3d10_depth_stencil.cpp  d3d10_device.cpp  d3d10_device.h  d3d10_include.h  d3d10_input_layout.cpp  d3d10_main.cpp  d3d10_query.cpp  d3d10_rasterizer.cpp  d3d10_sampler.cpp  d3d10_texture.cpp  d3d10_util.cpp  d3d10_view_dsv.cpp  d3d10_view_rtv.cpp  d3d10_view_srv.cpp
common/dxup10/src-cpp/dxgi/: dxgi_adapter.h  dxgi_factory.h  dxgi_monitor.h  dxgi_options.h  dxgi_output.cpp  dxgi_swapchain.h
common/dxup10/src-cpp/dxvk/: dxvk_include.h
common/dxup10/src-cpp/util/com/: com_guid.cpp
common/macros/: Cargo.toml
common/macros/src/: lib.rs
d3d11_dxvk/: d3d11_blend.cpp  d3d11_blend.h  d3d11_buffer.cpp  d3d11_buffer.h  d3d11_cmdlist.cpp  d3d11_cmdlist.h  d3d11_context.cpp  d3d11_context.h  d3d11_context_ext.h  d3d11_cuda.h  d3d11_depth_stencil.h  d3d11_device.cpp  d3d11_device.h  d3d11_interop.cpp  d3d11_interop.h  d3d11_main.cpp  d3d11_options.h  d3d11_query.h  d3d11_rasterizer.h  d3d11_sampler.h  d3d11_shader.h  d3d11_swapchain.h  d3d11_texture.h  d3d11_util.h  d3d11_view_dsv.h  d3d11_view_rtv.h  d3d11_view_srv.h  d3d11_view_uav.h
dalamud_host/: Core.cs  dalamud_host.csproj
ffxiv/: README.md  rust-toolchain.toml
ffxiv/dalamud_host/: Core.cs  build.bat  dalamud_host.csproj  xivr.json
ffxiv/scripts/: generate_d3d11_vtbl_hook.py
ffxiv/src/: module.rs
ffxiv/src/debugger/: shader_payload.rs
ffxiv/src/game/graphics/: mod.rs
ffxiv/src/game/graphics/kernel/: immediate_context.rs
ffxiv/src/game/graphics/render/: camera.rs
ffxiv/src/hooks/: patcher.rs
ffxiv/src/hooks/graphics/: mod.rs
ffxiv/src/xr/: mod.rs
jc2vr/: Cargo.toml  build.rs  rust-toolchain.toml
jc2vr/dxup-rs/: Cargo.toml  build.rs
jc2vr/dxup-rs/src/: bindings.rs  delay_load_modules.rs  image_thunks.rs  import_modules.rs  import_tables.rs  lib.rs  util.rs
jc2vr/dxup-rs/src-cpp/d3d10_1/: d3d10_1_main.cpp
jc2vr/launcher/: Cargo.toml
jc2vr/launcher/src/: main.rs
jc2vr/payload/: Cargo.toml
jc2vr/payload/assets/shaders/: jc2vr_screen_draw_pixel.hlsl  jc2vr_screen_draw_vertex.hlsl
jc2vr/src/: lib.rs
native/: Cargo.toml  build.rs
native/bindings/: Cargo.toml  build.rs
native/cimgui/: Cargo.toml  build.rs
native/cimgui/src/: lib.rs
native/macros/: Cargo.toml
native/macros/src/: lib.rs
native/shaders/: xivr_screen_draw_pixel.hlsl  xivr_screen_draw_vertex.hlsl
native/src/: ct_config.rs  lib.rs  log.rs  module.rs  util.rs
native/src/debugger/: command_stream.rs  d3d_payload.rs  message_payload.rs  mod.rs  shader_payload.rs
native/src/game/: math.rs  mod.rs
native/src/game/graphics/kernel/: context.rs  device.rs  immediate_context.rs  mod.rs  shader_command.rs  swap_chain.rs  texture.rs
native/src/game/graphics/render/: mod.rs  render_manager.rs  render_target_manager.rs
native/src/game/system/: mod.rs
native/src/game/system/framework/: framework.rs  mod.rs  window.rs
native/src/hooks/: mod.rs  patcher.rs
native/src/hooks/game/: game_main.rs  mod.rs
native/src/hooks/graphics/: mod.rs
native/src/hooks/graphics/d3d/: device_context.rs  mod.rs
native/src/hooks/graphics/kernel/: context.rs  immediate_context.rs  mod.rs
native/src/hooks/graphics/render/: camera.rs  mod.rs  render_manager.rs
native/src/xr/: mod.rs
scripts/: capture_log_scrubber.html  generate_addresses.rb  generate_d3d11_vtbl_hook.py
xivr/: Cargo.toml  README.md  build.rs
xivr/.cargo/: config.toml
xivr/assets/shaders/: xivr_screen_draw_pixel.hlsl  xivr_screen_draw_rg_debug_pixel.hlsl  xivr_screen_draw_vertex.hlsl
xivr/dalamud_host/: Core.cs  dalamud_host.csproj  xivr.json
xivr/injector/: Cargo.toml
xivr/injector/.cargo/: config.toml
xivr/injector/src/: main.rs
xivr/scripts/: generate_d3d11_vtbl_hook.py
xivr/src/: ct_config.rs  lib.rs  log.rs  module.rs  util.rs
xivr/src/debugger/: command_stream.rs  d3d_payload.rs  mod.rs  payload.rs  util.rs
xivr/src/game/: mod.rs
xivr/src/game/graphics/kernel/: context.rs  device.rs  immediate_context.rs  shader_command.rs  swap_chain.rs  texture.rs
xivr/src/game/graphics/render/: mod.rs  render_manager.rs  render_target_manager.rs
xivr/src/game/system/framework/: mod.rs  window.rs
xivr/src/hooks/: mod.rs  patcher.rs
xivr/src/hooks/game/: game_main.rs  mod.rs
xivr/src/hooks/graphics/: mod.rs
xivr/src/hooks/graphics/d3d/: device_context.rs  mod.rs
xivr/src/hooks/graphics/kernel/: constant_buffer.rs  context.rs  immediate_context.rs  mod.rs  swapchain.rs
xivr/src/hooks/graphics/render/: camera.rs  mod.rs  render_manager.rs
xivr/src/hooks/system/: mod.rs
xivr/src/hooks/system/framework/: mod.rs
xivr/src/util/: error_handling.rs  mod.rs  modules.rs  singleton.rs
xivr/src/xr/: debug_state.rs  framebuffer.rs  framebuffer_blitter.rs  mod.rs  swapchain.rs  swapchain_blitter.rs
(+2 files in other folders)
