cargo-features = ["edition2021"]

[package]
name = "xivr-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bindings = { path = "bindings" }
windows = "0.13" # This should match the version you used in the bindings crate
patternscan = "1.2.0"
detour = { git = "https://github.com/darfink/detour-rs" }
once_cell = "1.8.0"
macros = { path = "macros" }

[build-dependencies]
yaml-rust = "0.4"
anyhow = "1.0"
quote = "1.0"