cargo-features = ["edition2021"]

[package]
name = "xivr-native"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
bindings = { path = "bindings" }
cimgui = { path = "cimgui" }
windows = "0.18.0"
patternscan = "1.2.0"
detour = { git = "https://github.com/darfink/detour-rs" }
once_cell = "1.8.0"
macros = { path = "macros" }
openxr = { version = "0.15.2", features = ["static"] }
c_str_macro = "1.0.3"
backtrace = "0.3.60"
strum = "0.21"
strum_macros = "0.21"

[build-dependencies]
yaml-rust = "0.4"
anyhow = "1.0"
quote = "1.0"
registry = "1.2.0"
normpath = "0.3.0"