[package]
name = "xivr-native"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Local deps
bindings = { path = "../common/bindings" }
cimgui = { path = "../common/cimgui" }
macros = { path = "../common/macros" }

# Rust improvements
anyhow = "1.0"
c_str_macro = "1.0.3"
once_cell = "1.8.0"
strum = "0.21"
strum_macros = "0.21"
static_assertions = "1.1.0"

# OS interaction
windows = "0.18.0"
backtrace = "0.3.60"

# Detouring libraries
patternscan = "1.2.0"
detour = { git = "https://github.com/darfink/detour-rs" }

# OpenXR/maths
openxr = { version = "0.15.2", features = ["static"] }
glam = "0.17.3"

[build-dependencies]
yaml-rust = "0.4"
anyhow = "1.0"
quote = "1.0"
registry = "1.2.0"
normpath = "0.3.0"