[package]
name = "dxup-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-sys]
version = "0.33.0"
features = [
    "Win32_System_SystemServices"
]

[build-dependencies]
anyhow = "1.0.55"
cc = "1.0"
glob = "0.3.0"