[package]
edition = "2021"
name = "dxup-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.55"
detour = "0.8.1"

[dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
]
version = "0.33.0"

[build-dependencies]
anyhow = "1.0.55"
cc = "1.0"
glob = "0.3.0"
