[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
dll-syringe = "0.7.0"
steamlocate = "1.0.1"

[dependencies.windows]
version = "0.33.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
]
